# pip-plugin-pep740

./: Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
src/pip_plugin_pep740/: __init__.py  _impl.py
test/: test_impl.py  test_init.py
test/assets/: abi3info-2024.10.3-py3-none-any.whl  abi3info-2024.10.3-py3-none-any.whl.provenance  abi3info-2024.10.8-py3-none-any.whl  abi3info-2024.10.8-py3-none-any.whl.provenance  abi3info-2024.10.8.tar.gz.provenance
